# vacation_planner_crewai

./: .gitignore  Dockerfile  README.md  pyproject.toml  report.md  requirements.txt  streamlit_ui.py
extra/: aws_lambda_sample_agent.py  commands.txt  gateway_test.py
src/vacation_planner/: crew.py  main.py
src/vacation_planner/config/: agents.yaml  tasks.yaml
